TEST_PROGRAMS/INVALID/07/switch_invalid_case_exp.go
//testing switch-taken from go specification example

package main


func main () {
switch tag=1 {
	default: s3()
	}
}
	
